--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,16 @@
 		</plugins>
 	</build>
 
-	
+<distributionManagement>
+    <repository>
+        <id>maven-releases</id>
+        <url>http://54.90.49.175:8081/repository/maven-releases/</url>
+        </repository>
+
+        <snapshotRepository>
+            <id>maven-snapshots</id>
+            <url>http://54.90.49.175:8081/repository/maven-snapshots/</url>
+        </snapshotRepository>
+</distributionManagement>
 
 </project>
